<resources>
    <string name="app_name">Hava Durumu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="c">C</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="derece_tipi">Derece Tipi</string>
    <string name="kelvin">Kelvin</string>
    <string name="dil">Dil</string>
    <string name="ingilizce_en">İngilizce,en</string>
    <string name="turkce_tr">Türkçe,tr</string>
    <string name="guncelle">Güncelle</string>
    <string name="sehir_sec">Şehir Seç</string>
    <string name="ruzgar_yonu">Rüzgar Yönü</string>
    <string name="nem">Nem</string>
    <string name="basinc">Basınç</string>
    <string name="uv_endeksi">UV endeksi</string>
    <string name="ruzgar_hizi">Rüzgar Hızı</string>
    <string name="gorus_uzakligi">Görüş Uzaklığı</string>
    <string name="bos_veri">Boş Veri</string>
    <string name="hissadilen_sicaklik">Hissadilen Sıcaklık : </string>
</resources>
